--- a/stylos.css
+++ b/stylos.css
@@ -1,6 +1,43 @@
-body{
-    background-color: rgba(202, 146, 77, 0.589);
+* {
+    margin: 0px;
+    padding: 0;
+   
+    box-sizing: border-box;
+    font-family: Lobster;
 }
+body{
+    background-color: rgba(128, 235, 114, 0.589);
+}
+.navbar-nav{
+    display: flex !important;
+    justify-content: center !important;
+    margin: 0px !important;
+    }
+    nav {
+        margin-bottom: 3rem;
+        display: inline-block;
+        text-align: right;
+        width: 89%;
+        margin-bottom: 4.5%;
+    }
+    
+    nav ul li {
+        float: right;
+        margin-right: 1rem;
+        margin-top: 2rem;
+        margin-left: 1rem;
+    }
+    
+    .nav-link {
+        text-decoration: none;
+        color: rgb(171, 116, 223);
+        font-size: 2.5rem;
+    }
+    
+    nav ul li a:hover {
+        color: #f4fbfc;
+    }
+    
 
 .img-fluidmax-width {
     width: 100%;
@@ -54,9 +91,11 @@ body{
     }
     
     .card1 .card-img-top1, .card2 .card-img-top2, .card3 .card-img-top3, .card4 .card-img-top4 {
+        width: 3%;
         height: 10rem;
         object-fit: cover;
         width: 80%; 
+        text-align: center;
     }
     
     .card1 + .card2 + .card3 + .card4{
@@ -71,6 +110,4 @@ body{
         border-radius: .5rem;
     }
 
-    .card-img-top1{
-        width: 5rem;
-    }
+ 
